[package]
name = "bevy_gltf_trait"
version = "0.2.0"
edition = "2021"
description = "Customizable Bevy Engine GLTF loading"
repository = "https://github.com/dekirisu/bevy_gltf_trait"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
dds = ["bevy_render/dds", "bevy_image/dds", "bevy_core_pipeline/dds"]
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_multi_layer_material_textures = [
  "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]

[dependencies]
# bevy
bevy_image = "0.15.0"
bevy_animation = { version = "0.15.0", optional = true }
bevy_app = "0.15.0"
bevy_asset = "0.15.0"
bevy_color = "0.15.0"
bevy_core = "0.15.0"
bevy_core_pipeline = "0.15.0"
bevy_ecs = "0.15.0"
bevy_hierarchy = "0.15.0"
bevy_math = "0.15.0"
bevy_pbr = "0.15.0"
bevy_reflect = { version = "0.15.0", features = [
  "bevy",
] }
bevy_render = "0.15.0"
bevy_scene = { version = "0.15.0", features = [
  "bevy_render",
] }
bevy_transform = "0.15.0"
bevy_tasks = "0.15.0"
bevy_utils = "0.15.0"

# other
gltf = { version = "1.4.0", default-features = false, features = [
  "KHR_lights_punctual",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_volume",
  "KHR_materials_unlit",
  "KHR_materials_emissive_strength",
  "KHR_texture_transform",
  "extras",
  "extensions",
  "names",
  "utils",
] }
thiserror = "1.0"
base64 = "0.22.0"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = "1.11"

[dev-dependencies]
bevy_log = "0.15.0"
bevy = "0.15.0"
