[package]
name = "bevy_gltf_trait"
version = "0.4.0-rc"
edition = "2024"
description = "Customizable Bevy Engine GLTF loading"
repository = "https://github.com/dekirisu/bevy_gltf_trait"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
dds = ["bevy_render/dds", "bevy_image/dds", "bevy_core_pipeline/dds"]
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_multi_layer_material_textures = [
  "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]
pbr_specular_textures = ["bevy_pbr/pbr_specular_textures"]

[dependencies]
# bevy
bevy_animation = { version = "0.16.0-rc.3", optional = true }
bevy_app = { version = "0.16.0-rc.3" }
bevy_asset = { version = "0.16.0-rc.3" }
bevy_color = { version = "0.16.0-rc.3" }
bevy_core_pipeline = { version = "0.16.0-rc.3" }
bevy_ecs = { version = "0.16.0-rc.3" }
bevy_image = { version = "0.16.0-rc.3" }
bevy_math = { version = "0.16.0-rc.3" }
bevy_mesh = { version = "0.16.0-rc.3" }
bevy_pbr = { version = "0.16.0-rc.3" }
bevy_reflect = { version = "0.16.0-rc.3" }
bevy_render = { version = "0.16.0-rc.3" }
bevy_scene = { version = "0.16.0-rc.3", features = [
  "bevy_render",
] }
bevy_transform = { version = "0.16.0-rc.3" }
bevy_tasks = { version = "0.16.0-rc.3" }
bevy_utils = { version = "0.16.0-rc.3" }
bevy_platform_support = { version = "0.16.0-rc.3", default-features = false, features = [
  "std",
  "serialize",
] }

# other
gltf = { version = "1.4.0", default-features = false, features = [
  "KHR_lights_punctual",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_volume",
  "KHR_materials_unlit",
  "KHR_materials_emissive_strength",
  "KHR_texture_transform",
  "extras",
  "extensions",
  "names",
  "utils",
] }
thiserror = { version = "2", default-features = false }
base64 = "0.22.0"
fixedbitset = "0.5"
itertools = "0.14"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = "1.11"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
bevy_log = { version = "0.16.0-rc.3" }

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
