[package]
name = "bevy_gltf_trait"
version = "0.4.0"
edition = "2024"
description = "Customizable Bevy Engine GLTF loading"
repository = "https://github.com/dekirisu/bevy_gltf_trait"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_multi_layer_material_textures = [
  "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]
pbr_specular_textures = ["bevy_pbr/pbr_specular_textures"]

[dependencies]
# bevy
bevy_animation = { version = "0.17.0-rc.1", optional = true }
bevy_app = { version = "0.17.0-rc.1" }
bevy_asset = { version = "0.17.0-rc.1" }
bevy_color = { version = "0.17.0-rc.1" }
bevy_ecs = { version = "0.17.0-rc.1" }
bevy_image = { version = "0.17.0-rc.1" }
bevy_light = { version = "0.17.0-rc.1" }
bevy_camera = { version = "0.17.0-rc.1" }
bevy_math = { version = "0.17.0-rc.1" }
bevy_mesh = { version = "0.17.0-rc.1" }
bevy_pbr = { version = "0.17.0-rc.1" }
bevy_reflect = { version = "0.17.0-rc.1" }
bevy_render = { version = "0.17.0-rc.1" }
bevy_scene = { version = "0.17.0-rc.1" }
bevy_transform = { version = "0.17.0-rc.1" }
bevy_tasks = { version = "0.17.0-rc.1" }
bevy_platform = { version = "0.17.0-rc.1", default-features = false, features = [
  "std",
  "serialize",
] }

# other
gltf = { version = "1.4.0", default-features = false, features = [
  "KHR_lights_punctual",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_volume",
  "KHR_materials_unlit",
  "KHR_materials_emissive_strength",
  "KHR_texture_transform",
  "extras",
  "extensions",
  "names",
  "utils",
] }
thiserror = { version = "2", default-features = false }
base64 = "0.22.0"
fixedbitset = "0.5"
itertools = "0.14"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
smallvec = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
bevy_log = { version = "0.17.0-rc.1" }
bevy = "0.17.0-rc.1"
